@@ -1,3 +1,6 @@
+2006-05-23  Don Allingham  <don@gramps-project.org>
+	* src/DataViews/_FamilyView.py: more shading
+
 2006-05-22  Alex Roitman  <shura@gramps-project.org>
 	* data/gramps.schemas.in: Typos.
 	* src/DataViews/_PedigreeView.py (rebuild): Typo.
